--- a/src/Common/Favorites/Favorites.module.css
+++ b/src/Common/Favorites/Favorites.module.css
@@ -310,6 +310,11 @@ justify-content: center;
     transform: translateZ(-25px) rotateX(-90deg);
   }
 
+  @media screen and (max-width: 500px) {
+    .noProductButton span button{
+        font-size: 11px;
+      }
+  }
 
 
 
