--- a/src/Components/MainPage/Content/Product/Carousel.module.css
+++ b/src/Components/MainPage/Content/Product/Carousel.module.css
@@ -57,16 +57,24 @@
 }
 @media all and (max-width:600px){
     .transition{
-        max-width: 200px;
-        min-width: 200px;
+        max-width: 220px;
+        min-width: 220px;
+        transition: all 0.5s;
+        object-fit: cover;
+    }
+}
+@media all and (max-width:500px){
+    .transition{
+        max-width: 100px;
+        min-width: 190px;
         transition: all 0.5s;
         object-fit: cover;
     }
 }
 @media all and (max-width:400px){
     .transition{
-        max-width: 160px;
-        min-width: 160px;
+        max-width: 180px;
+        min-width: 180px;
         transition: all 0.5s;
         object-fit: cover;
     }
