--- a/src/Components/MainPage/Content/SaleMain/Sale.module.css
+++ b/src/Components/MainPage/Content/SaleMain/Sale.module.css
@@ -8,12 +8,10 @@
     grid-area: header;
     display: flex;
     justify-content: center;
-    margin: 20px;
 }
 .header h3{
     font-size: 34px;
 }
-.maincontent {
+.Content {
     grid-area: maincontent;
-
 } 
