--- a/src/Components/Man/ManMain.module.css
+++ b/src/Components/Man/ManMain.module.css
@@ -178,6 +178,12 @@ a:hover{
       
     transform: translateZ(-25px) rotateX(-90deg);
   }
+  @media screen and (max-width: 1000px) {
+    .upImage img {
+      margin: 100px 0;
+      
+  }
+}
   
   @media screen and (max-width: 800px) {
     .select {
@@ -186,3 +192,87 @@ a:hover{
         margin: 0 auto;
     }
 }
+@media screen and (max-width: 500px) {
+    
+    span button{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 14px;
+      height: 35px;
+      width: 110px;
+      border-radius: 5px;
+      letter-spacing: 1px;
+      transform-style: preserve-3d;
+      transform: translateZ(-25px);
+      transition: transform .25s;
+      font-family: 'Montserrat', sans-serif;
+      
+    }
+    span button:before,
+    span button:after{
+      position: absolute;
+      content: "Add to Cart";
+      height: 35px;
+      width: 110px;
+      display: flex;
+      top:-2px;
+      align-items: center;
+      justify-content: center;
+      border: 3px solid black;
+      box-sizing: border-box;
+      border-radius: 5px;
+    }
+    span button:before{
+      color: #fff;
+      background: #000;
+      transform: rotateY(0deg) translateZ(25px);
+    }
+    span button:after{
+      color: #000;
+      transform: rotateX(90deg) translateZ(25px);
+    }
+  }
+  @media screen and (max-width: 400px) {
+      
+      span button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 12px;
+        height: 30px;
+        width: 110px;
+        border-radius: 5px;
+        letter-spacing: 1px;
+        transform-style: preserve-3d;
+        transform: translateZ(-25px);
+        transition: transform .25s;
+        font-family: 'Montserrat', sans-serif;
+        
+      }
+      span button:before,
+      span button:after{
+        position: absolute;
+        content: "Add to Cart";
+        height: 30px;
+        width: 110px;
+        display: flex;
+        top:-2px;
+        align-items: center;
+        justify-content: center;
+        border: 3px solid black;
+        box-sizing: border-box;
+        border-radius: 5px;
+      }
+      span button:before{
+        color: #fff;
+        background: #000;
+        transform: rotateY(0deg) translateZ(25px);
+      }
+      span button:after{
+        color: #000;
+        transform: rotateX(90deg) translateZ(25px);
+      }
+    }
+  
+  
