--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -8,10 +8,13 @@
     display:grid;
     grid-template-areas:
             'Logo HeaderMain Login ';
-    grid-template-columns: 1.8fr 6fr 4fr ;
+    grid-template-columns: 1.4fr 5.8fr 4.7fr ;
     margin: 0px 0px 20px;
     font-family: 'Popins', sans-serif;
     width: 100%;
+}
+.Header a{
+font-size: 32px;
 }
 
 .Header a:hover { 
@@ -27,14 +30,14 @@
     grid-area: Logo;
     position: relative;
     text-decoration: none;
-    font-size: 2em;
     text-transform: uppercase;
     letter-spacing: 2px;
-    margin-top: 15px;
-    margin-left: 50px;
+    margin-top: 21px;
+    margin-left: 35px;
+    max-height: 50px;
 }
 .logo a{
-
+    font-size: 38px;
     color: black;
     text-decoration: none;
 
@@ -51,8 +54,7 @@
     text-decoration: none;
     display: inline-block;
     letter-spacing: 2px;
-    text-indent: 5em;
-    font-size: 20px;
+    text-indent: 2.5em;
     margin-top: 24px;
 }
 .Login{
@@ -64,15 +66,13 @@
     color: black;
     text-decoration: none;
     letter-spacing: 2px;
-    text-indent: 1.4em;
-    font-size: 20px;
+    text-indent: 1.5em;
     margin-top: 23px;
 }
 .cart{
     color: black;
     text-decoration: none;
     display: inline-block;
-    font-size: 20px;
     margin-top: 30px;
 }
 .cartLength{
@@ -90,22 +90,34 @@
   }
 
 }
+@media screen and (max-width: 1500px) {
+    .Header a{
+        font-size: 27px;
+    }
+    .logo a{
+        font-size: 34px;
+    }
+    .logo{
+        margin-top: 19px;
+    }
+}
 @media screen and (max-width: 1300px) {
     .Header {
         grid-template-columns: auto ;
 
 }
 .Header a{
+    font-size: 27px;
     letter-spacing: 2px;
-    text-indent: 1.8em;
+    text-indent: 1.1em;
     margin-top: 18px;
 }
 .logo a{
-    font-size: 25px;
+    font-size: 28px;
 }
 .logo{
-    margin-top: 8px;
-    margin-left: 18px;
+    margin-top: 20px;
+    margin-left: 10px;
 }
 
 }
@@ -119,16 +131,30 @@
     display:grid;
     grid-template-areas:
             'menu Logo Login ';
-    grid-template-columns: 2fr 2fr 5fr ;
+    grid-template-columns: 1fr 2fr 5fr ;
+    max-height: 50px;
     /* position: fixed;
     z-index: 100; */
 }
+.Header a{
+    font-size: 29px;
+}
+.logo{
+    margin-top: 17px;
+    margin-left: 0px;
+}
+.logo a{
+    font-size: 30px;
+}
+
 .menu{
     grid-area: menu;
     position: relative;
-    top:15px;
-    left:20px;
+    top:22px;
+    left:0px;
     z-index: 2;
+    max-height: 50px;
+    width: 120%;
 }
 .menu button:hover{
     color: red;
@@ -141,11 +167,12 @@
     display: flex;
     flex-direction:column;
     font-size: 20px;
-    width: 55%;
+    width: 120%;
     z-index: 2;
 }
 .menu1 a{
     margin-left: -26px;
+    font-size: 34px;
 }
 
 .menu2{
@@ -154,31 +181,33 @@
 .Header a{
     max-height: 20px;
 }
+
+
 }
 
 @media screen and (max-width: 800px) {
     .Header{
-        max-height: 50px;
+            width: 99%;
+            grid-template-columns: 1fr 1.2fr 5.2fr ;
     }
     .Header a{
-        font-size: 18px;
+        font-size: 24px;
     }
     .logo a{
-        font-size: 21px;
+        font-size: 25px;
     }
     .logo{
-        margin-top: 4px;
-        margin-left: 4px;
+        margin-top: 18px;
     }
     .menu{
-        grid-area: menu;
-        position: relative;
-        top:11px;
-        left:20px;
-        z-index: 2;
+        top:18px;
+        width: 130%;
     }
     .menu1{
-        width: 58%;
+        width: 130%;
+    }
+    .menu1 a{
+        font-size: 34px;
     }
 }
 
@@ -186,59 +215,57 @@
 
     .Header{
         width: 99%;
-        max-height: 20px;
-        grid-template-columns: 2fr 1.2fr 5.2fr ;
+        max-height: 30px;
+        grid-template-columns: 1.2fr 1.2fr 5.3fr ;
     }
     .Header a{
-        font-size: 14px;
-        text-indent: 1.2em;
+        font-size: 17px;
+        text-indent: 1em;
     }
     .logo a{
-        font-size: 16px;
+        font-size: 17px;
         
     }
     .logo{
-        margin-top: 1px;
+        margin-top: 18px;
         margin-left: 0px;
     }
-    .menu{
-        grid-area: menu;
-        position: relative;
-        top:9px;
-        left:5px;
-        z-index: 2;
-    }
     .menu1{
-        width: 77%;
+        width: 130%;
     }
     .menu1 a{
-        margin-left: -26px;
+        font-size: 24px;
     }
-    
+    .menu{
+        top:9px;
+        width: 130%;
+    }
 }
 @media screen and (max-width: 400px) {
 
     .Header{
-        max-height: 50px;
-        grid-template-columns: 1.5fr 1.2fr 5fr ;
+        max-height: 25px;
+        grid-template-columns: 0.2fr 1.6fr 6fr ;
     }
     .Header a{
-        font-size: 11px;
-        text-indent: 1em;
+        font-size: 14px;
+        text-indent: 0.5em;
     }
     .logo a{
-        font-size: 12px;
+        font-size: 15px;
     }
     .logo{
-        margin-top: -4px;
-        margin-left: 4px;
+        margin-top: 17px;
+        margin-left: 0px;
     }
     .menu{
-        grid-area: menu;
-        position: relative;
-        top:4px;
-        left:1px;
-        z-index: 2;
+        top:6px;
         width: 130%;
+    }
+    .menu1{
+        width: 135%;
+    }
+    .menu1 a{
+        font-size: 20px;
     }
 }
