--- a/src/Common/Favorites/Favorites.module.css
+++ b/src/Common/Favorites/Favorites.module.css
@@ -9,7 +9,7 @@ grid-template-rows: auto auto ;
     grid-area: header;
     display: flex;
     justify-content: center;
-    margin:30px 0px 0px;
+    margin:40px 0px 0px;
 }
 .header h3{
     font-size: 30px;
@@ -155,7 +155,15 @@ a:hover{
     font-weight: 400;
     margin-top: 12px;
 }
-
+.favoritesandCart{
+  display: flex;
+  flex-direction: row;
+}
+.favoritesandCart button{
+  margin: 15px;
+  position: relative;
+  left:-30px
+}
 .noProduct {
     grid-area: maincontent;
 }
@@ -164,63 +172,50 @@ text-align: center;
 font-size: 20px;
 margin: 30px;
 }
-.noProductButton{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
 
-.noProductButton span button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 19px;
-    max-height: 100%;
-    max-width: 100%;
-    padding: 20px;
-    border-radius: 5px;
-    letter-spacing: 1px;
-    transform-style: preserve-3d;
-    transform: translateZ(-25px);
-    transition: transform .25s;
-    font-family: 'Montserrat', sans-serif;
-    
-  }
-.noProductButton span button:before,
-.noProductButton span button:after{
-    content: "ПЕРЕЙТИ В КАТАЛОГ";
-    height: 104%;
-    width: 102%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 3px solid black;
-    box-sizing: border-box;
-    border-radius: 5px;
-  }
-.noProductButton span button:before{
-    color: #fff;
-    background: #000;
-    transform: rotateY(0deg) translateZ(25px);
-  }
-  .noProductButton span button:after{
-    color: #000;
-    transform: rotateX(90deg) translateZ(25px);
-  }
-  .noProductButton span button:hover{
-      
-    transform: translateZ(-25px) rotateX(-90deg);
-  }
+.noProduct span button{
+  display: flex;
+  margin: 0 auto;
+  margin-top: 70px;
+  align-items: center;
+  font-size: 20px;
+  height: 85px;
+  width: 180px;
+  border-radius: 5px;
+  letter-spacing: 1px;
+  transform-style: preserve-3d;
+  transform: translateZ(-25px);
+  transition: transform .25s;
+  font-family: 'Montserrat', sans-serif;
   
-  .favoritesandCart{
-      display: flex;
-justify-content: center;
-
-  }
-  .favoritesandCart button{
- margin: 5px;
-
-
+}
+.noProduct span button:before,
+.noProduct span button:after{
+  position: absolute;
+  content: "ПЕРЕЙТИ В КАТАЛОГ";
+  height: 85px;
+  width: 180px;
+  display: flex;
+  top:-20px;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid black;
+  box-sizing: border-box;
+  border-radius: 5px;
+  
+}
+.noProduct span button:before{
+  color: #fff;
+  background: #000;
+  transform: rotateY(0deg) translateZ(25px);
+}
+.noProduct span button:after{
+  color: #000;
+  transform: rotateX(90deg) translateZ(25px);
+}
+.noProduct span button:hover{
+    
+  transform: translateZ(-25px) rotateX(-90deg);
 }
 
 
@@ -311,9 +306,56 @@ justify-content: center;
   }
 
   @media screen and (max-width: 500px) {
+    .noProduct span button{
+      display: flex;
+      margin: 0 auto;
+      margin-top: 70px;
+      align-items: center;
+      font-size: 20px;
+      height: 70px;
+      width: 140px;
+      border-radius: 5px;
+      letter-spacing: 1px;
+      transform-style: preserve-3d;
+      transform: translateZ(-25px);
+      transition: transform .25s;
+      font-family: 'Montserrat', sans-serif;
+      
+    }
+    .noProduct span button:before,
+    .noProduct span button:after{
+      position: absolute;
+      content: "ПЕРЕЙТИ В КАТАЛОГ";
+      height: 70px;
+      width: 140px;
+      display: flex;
+      top:-20px;
+      align-items: center;
+      justify-content: center;
+      border: 3px solid black;
+      box-sizing: border-box;
+      border-radius: 5px;
+      
+    }
     .noProductButton span button{
-        font-size: 11px;
+        font-size: 14px;
       }
+      .favoritesandCart{
+        display: block;
+      }
+      .favoritesandCart button{
+        position: relative;
+        left: 20%;
+      }
+      .header h3{
+        font-size: 20px;
+    }
+    .image{
+      max-width: 250px;
+      max-height: 310px;    
+  }
+
+    
   }
 
 
