--- a/src/Components/MainPage/Content/Product/Carousel.module.css
+++ b/src/Components/MainPage/Content/Product/Carousel.module.css
@@ -2,81 +2,70 @@
     width: 100%;
     height: auto;
     object-fit: cover;
+    max-width: 500px;
+    min-width: 500px;
+    max-height: 600px;
+    min-height: 600px;
 }
 .transition{
     justify-content: center;
     align-items: center;
-    max-width: 500px;
-    min-width: 500px;
-    max-height: 700px;
     transition: all 0.5s;
     object-fit: cover;
 }
-@media all and (max-width:1200px){
-    .transition{
-        justify-content: center;
-        align-items: center;
+@media all and (max-width:1000px){
+    .transition img{
+        width: 100%;
+        height: auto;
+        object-fit: cover;
         max-width: 400px;
         min-width: 400px;
-        max-height: 600px;
-        transition: all 0.5s;
-        object-fit: cover;
-    }
-}
-@media all and (max-width:1000px){
-    .transition{
-        justify-content: center;
-        align-items: center;
-        max-width: 350px;
-        min-width: 350px;
         max-height: 500px;
-        transition: all 0.5s;
-        object-fit: cover;
+        min-height: 500px;
     }
 }
 @media all and (max-width:800px){
-    .transition{
-        justify-content: center;
-        align-items: center;
-        max-width: 300px;
-        min-width: 300px;
-        max-height: 400px;
-        transition: all 0.5s;
+    .transition img{
+        width: 100%;
+        height: auto;
         object-fit: cover;
+        max-width: 350px;
+        min-width: 350px;
+        max-height:450px;
+        min-height: 450px;
     }
 }
 @media all and (max-width:700px){
-    .transition{
-        justify-content: center;
-        align-items: center;
-        max-width: 290px;
-        min-width: 290px;
-        transition: all 0.5s;
+    .transition img{
+        width: 100%;
+        height: auto;
         object-fit: cover;
+        max-width: 300px;
+        min-width: 300px;
+        max-height:400px;
+        min-height: 400px;
     }
 }
 @media all and (max-width:600px){
-    .transition{
-        max-width: 220px;
-        min-width: 220px;
-        transition: all 0.5s;
+    .transition img{
+        width: 100%;
+        height: auto;
         object-fit: cover;
+        max-width: 270px;
+        min-width: 270px;
+        max-height:370px;
+        min-height: 370px;
     }
 }
 @media all and (max-width:500px){
-    .transition{
-        max-width: 100px;
+    .transition img{
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        max-width: 190px;
         min-width: 190px;
-        transition: all 0.5s;
-        object-fit: cover;
-    }
-}
-@media all and (max-width:400px){
-    .transition{
-        max-width: 180px;
-        min-width: 180px;
-        transition: all 0.5s;
-        object-fit: cover;
+        max-height:300px;
+        min-height: 300px;
     }
 }
 
