--- a/src/Common/Favorites/Favorites.module.css
+++ b/src/Common/Favorites/Favorites.module.css
@@ -61,7 +61,7 @@ grid-template-rows: auto auto ;
 .component {
     max-width: 285px;
     max-height: 350px;
-    margin:  100px 10px 0px;
+    margin:  80px 10px 0px;
     margin-bottom:220px;
     justify-content: center;
     align-items: center;
@@ -351,10 +351,12 @@ margin: 30px;
         font-size: 20px;
     }
     .image{
-      max-width: 250px;
-      max-height: 310px;    
+      max-width: 260px;
+      max-height: 330px;    
   }
-
+  .component {
+    margin:  50px 10px 0px; 
+}
     
   }
 
