--- a/src/Common/Favorites/Favorites.module.css
+++ b/src/Common/Favorites/Favorites.module.css
@@ -348,6 +348,9 @@ margin: 30px;
         position: relative;
         left: 21%;
       }
+      .header {
+        margin:20px 0px 0px;
+    }
       .header h3{
         font-size: 20px;
     }
