--- a/src/Components/Shoes/Shoes.module.css
+++ b/src/Components/Shoes/Shoes.module.css
@@ -7,12 +7,15 @@
     grid-template-columns: auto auto;
     justify-content: center;
 }
-
 .upImage img {
-    grid-area: header;
-    display: inline-block;
-    width: 90%;
-    height: 90%;
+  grid-area: header;
+  position: relative;
+  left:10%;
+  top: 2%;
+}
+.upImage img {
+    width: 80%;
+    height: 80%;
     margin-bottom: 50px;
 }
 .ShoesContent{
@@ -36,6 +39,7 @@ a:hover{
     grid-area: select;
     display: flex;
     justify-content: center;
+    margin-bottom: 70px;
 }
 
 .maincontent {
@@ -239,7 +243,7 @@ a:hover{
     .select {
         grid-area: select;
         display: block;
-        margin: 0 auto;
+        margin: 0 auto 40px;
     }
 }
 @media screen and (max-width: 600px) {
