--- a/src/Components/Woman/WomanMain.module.css
+++ b/src/Components/Woman/WomanMain.module.css
@@ -23,6 +23,7 @@ a:hover{
     grid-area: select;
     display: flex;
     justify-content: center;
+    margin-bottom: 70px;
 }
 
 
@@ -183,7 +184,7 @@ a:hover{
     .select {
         grid-area: select;
         display: block;
-        margin: 0 auto;
+        margin: 0 auto 40px;
     }
 }
 
