--- a/src/Common/Cart/Cart.module.css
+++ b/src/Common/Cart/Cart.module.css
@@ -16,7 +16,7 @@ grid-template-rows: auto auto ;
     font-family: 'Ubuntu', sans-serif;
     text-transform: uppercase;
     letter-spacing: 6px;
-    margin: 0;
+    margin-bottom: 40px;
     padding: 0;
     text-align: center;
 }
@@ -61,8 +61,7 @@ grid-template-rows: auto auto ;
 .component {
     max-width: 285px;
     max-height: 350px;
-    margin:  80px 10px 0px;
-    margin-bottom:220px;
+    margin:10px 20px 245px;
     justify-content: center;
     align-items: center;
     
@@ -82,10 +81,8 @@ grid-template-rows: auto auto ;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 70px;
+    margin-top: 40px;
 }
-
-
 
 .increase{
     display: flex;
@@ -108,6 +105,7 @@ grid-template-rows: auto auto ;
     align-items: center;
     text-align: center;
     font-size: 20px;
+    
 }
 
 .removeFromCart{
@@ -294,8 +292,6 @@ margin: 30px;
     .component {
         max-width: 260px;
         max-height: 330px;    
-        margin:  50px 10px 0px; 
-        margin-bottom:195px;
     }
     .image{
         max-width: 260px;
@@ -335,6 +331,13 @@ margin: 30px;
 }
 .header h3{
     font-size: 20px;
+    margin-bottom: 20px;
+}
+.increase{
+    margin-bottom: 200px;
+}
+.stripe{
+    margin-top: 5px;
 }
 
   }
