--- a/src/Components/MainPage/Content/SaleMain/Sale.module.css
+++ b/src/Components/MainPage/Content/SaleMain/Sale.module.css
@@ -11,7 +11,14 @@
 }
 .header h3{
     font-size: 34px;
+    margin-bottom: 70px;
 }
 .Content {
     grid-area: maincontent;
 } 
+@media screen and (max-width: 800px) {
+    .header h3{
+        font-size: 34px;
+        margin-bottom: 40px;
+    }
+}
