--- a/src/Components/Man/ManMain.module.css
+++ b/src/Components/Man/ManMain.module.css
@@ -25,6 +25,7 @@ a:hover{
     grid-area: select;
     display: flex;
     justify-content: center;
+    margin-bottom: 70px;
 }
 
 .maincontent {
@@ -189,7 +190,7 @@ a:hover{
     .select {
         grid-area: select;
         display: block;
-        margin: 0 auto;
+        margin: 0 auto 40px;
     }
 }
 @media screen and (max-width: 500px) {
