--- a/src/Components/MainPage/Content/Product/Carousel.module.css
+++ b/src/Components/MainPage/Content/Product/Carousel.module.css
@@ -2,70 +2,58 @@
     width: 100%;
     height: auto;
     object-fit: cover;
-    max-width: 500px;
-    min-width: 500px;
-    max-height: 600px;
-    min-height: 600px;
 }
 .transition{
     justify-content: center;
     align-items: center;
     transition: all 0.5s;
     object-fit: cover;
+    width: 500px;
+    height: 600px;
 }
 @media all and (max-width:1000px){
-    .transition img{
+    .transition{
         width: 100%;
         height: auto;
         object-fit: cover;
-        max-width: 400px;
-        min-width: 400px;
-        max-height: 500px;
-        min-height: 500px;
+        width: 400px;
+        height: 500px;
     }
 }
 @media all and (max-width:800px){
-    .transition img{
+    .transition{
         width: 100%;
         height: auto;
         object-fit: cover;
-        max-width: 350px;
-        min-width: 350px;
-        max-height:450px;
-        min-height: 450px;
+        width: 350px;
+        height: 450px;
     }
 }
 @media all and (max-width:700px){
-    .transition img{
+    .transition{
         width: 100%;
         height: auto;
         object-fit: cover;
-        max-width: 300px;
-        min-width: 300px;
-        max-height:400px;
-        min-height: 400px;
+        width: 300px;
+        height: 400px;
     }
 }
 @media all and (max-width:600px){
-    .transition img{
+    .transition{
         width: 100%;
         height: auto;
         object-fit: cover;
-        max-width: 270px;
-        min-width: 270px;
-        max-height:370px;
-        min-height: 370px;
+        width: 270px;
+        height: 370px;
     }
 }
 @media all and (max-width:500px){
-    .transition img{
+    .transition{
         width: 100%;
         height: auto;
         object-fit: cover;
-        max-width: 190px;
-        min-width: 190px;
-        max-height:300px;
-        min-height: 300px;
+        width: 190px;
+        height: 300px;
     }
 }
 
