--- a/src/Components/Mapping/Mapping.module.css
+++ b/src/Components/Mapping/Mapping.module.css
@@ -18,12 +18,10 @@
     margin: 0px 200px;
 }
 .component img {
-    width: 100%;
-    height: 100%;
     object-fit: cover;
     border-radius: 3px;
-    max-width: 285px;
-    max-height: 350px;
+    width: 285px;
+    height: 350px;
     transition: all 0.5s;
     min-height: 350px;
    
@@ -33,12 +31,12 @@
 }
 .image{
     overflow: hidden;
-    max-width: 285px;
-    max-height: 350px;
+    width: 285px;
+    height: 350px;
 }
 .component {
-    max-width: 285px;
-    max-height: 350px;
+    width: 285px;
+    height: 350px;
     margin:  0 10px 290px;
     justify-content: center;
     align-items: center;
@@ -218,8 +216,7 @@
         flex-wrap: wrap;
 
         margin: 0px auto;
-    }
-    
+    } 
     .product{
         display: flex;
         flex-wrap: wrap;
@@ -227,14 +224,9 @@
         margin: 0px auto;
     }
     .component img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
         border-radius: 3px;
-        max-width: 285px;
-        max-height: 350px;
-        transition: all 0.5s;
-        min-height: 350px;
+        width: 285px;
+        height: 350px;
        
     }
     .productId{
