--- a/src/Common/Favorites/Favorites.module.css
+++ b/src/Common/Favorites/Favorites.module.css
@@ -9,7 +9,7 @@ grid-template-rows: auto auto ;
     grid-area: header;
     display: flex;
     justify-content: center;
-    margin:40px 0px 0px;
+    margin:90px 0px 0px;
 }
 .header h3{
     font-size: 30px;
@@ -359,7 +359,7 @@ margin: 30px;
     }
     .header h3{
       font-size: 20px;
-      margin-bottom: 20px;
+      margin: 70px 0 20px;
   }
     .image{
       max-width: 260px;
