--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -9,7 +9,6 @@
     grid-template-areas:
             'Logo HeaderMain Login ';
     grid-template-columns: 1.4fr 5.8fr 4.7fr ;
-    margin: 0px 0px 20px;
     font-family: 'Popins', sans-serif;
     width: 100%;
 }
@@ -90,6 +89,11 @@ font-size: 32px;
   }
 
 }
+@media screen and (max-width: 1600px) {
+    .Header a{
+        font-size: 29px;
+    }
+}
 @media screen and (max-width: 1500px) {
     .Header a{
         font-size: 27px;
@@ -132,9 +136,9 @@ font-size: 32px;
     grid-template-areas:
             'menu Logo Login ';
     grid-template-columns: 1fr 2fr 5.9fr ;
-    max-height: 50px;
-    /* position: fixed;
-    z-index: 100; */
+    height: 70px;
+    position: fixed;
+    z-index: 100;
 }
 .Header a{
     font-size: 29px;
@@ -169,6 +173,7 @@ font-size: 32px;
     font-size: 20px;
     width: 135%;
     z-index: 2;
+    background-color: white;
 }
 .menu1 a{
     margin-left: -26px;
@@ -182,13 +187,12 @@ font-size: 32px;
     max-height: 20px;
 }
 
-
 }
 
-@media screen and (max-width: 800px) {
+@media all and (max-width: 800px) {
     .Header{
-            width: 99%;
             grid-template-columns: 1fr 1.2fr 5.8fr ;
+            height: 60px;
     }
     .Header a{
         font-size: 22px;
@@ -201,7 +205,7 @@ font-size: 32px;
         margin-top: 18px;
     }
     .menu{
-        top:18px;
+        top:16px;
         width: 162%;
     }
     .menu1{
@@ -215,9 +219,8 @@ font-size: 32px;
 @media screen and (max-width: 500px) {
 
     .Header{
-        width: 99%;
-        max-height: 30px;
         grid-template-columns: 1fr 1.3fr 5.8fr ;
+        height: 50px;
     }
     .Header a{
         font-size: 18px;
@@ -245,7 +248,6 @@ font-size: 32px;
 @media screen and (max-width: 400px) {
 
     .Header{
-        max-height: 25px;
         grid-template-columns: 0.1fr 1.6fr 6.9fr ;
     }
     .Header a{
@@ -260,7 +262,7 @@ font-size: 32px;
         margin-left: 0px;
     }
     .menu{
-        top:7px;
+        top:6px;
         width: 140%;
     }
     .menu1{
@@ -273,8 +275,8 @@ font-size: 32px;
 @media screen and (max-width: 300px) {
 
     .Header{
-        max-height: 25px;
         grid-template-columns: 0.1fr  auto ;
+        height: 40px;
     }
     .Header a{
         font-size: 13px;
