--- a/src/Components/Man/ManMain.module.css
+++ b/src/Components/Man/ManMain.module.css
@@ -18,14 +18,13 @@ a:hover{
     grid-area: header;
     display: inline-block;
     width: 100%;
-    margin-bottom: 50px;
-    
+    margin-top: 20px;
 }
 .select {
     grid-area: select;
     display: flex;
     justify-content: center;
-    margin-bottom: 70px;
+    margin: 50px 0 70px;
 }
 
 .maincontent {
@@ -44,9 +43,9 @@ a:hover{
     object-fit: cover;
     border-radius: 3px;
     max-width: 285px;
-    max-height: 350px;
+    height: 350px;
     transition: all 0.5s;
-    min-height: 350px;
+
 }
 .component img:hover {
     transform: scale(1.05);
@@ -179,21 +178,28 @@ a:hover{
       
     transform: translateZ(-25px) rotateX(-90deg);
   }
-  @media screen and (max-width: 1000px) {
+
+  
+  @media all and (max-width: 1000px) {
     .upImage img {
-      margin: 100px 0;
+      margin:70px 0;
       
   }
 }
+
   
-  @media screen and (max-width: 800px) {
+  @media all and (max-width: 800px) {
     .select {
         grid-area: select;
         display: block;
         margin: 0 auto 40px;
     }
+    .upImage img {
+      margin:60px 0;
+      
+  }
 }
-@media screen and (max-width: 500px) {
+@media all and (max-width: 500px) {
     
     span button{
       display: flex;
@@ -233,8 +239,12 @@ a:hover{
       color: #000;
       transform: rotateX(90deg) translateZ(25px);
     }
+    .upImage img {
+      margin:50px 0;
+      
   }
-  @media screen and (max-width: 400px) {
+  }
+  @media all and (max-width: 400px) {
       
       span button{
         display: flex;
