--- a/src/Components/MainPage/Content/NewReleases/NewReleases.module.css
+++ b/src/Components/MainPage/Content/NewReleases/NewReleases.module.css
@@ -36,7 +36,7 @@ a:hover{
 .maincontent {
     grid-area: maincontent;
 }
-@media screen and (max-width: 800px) {
+@media all and (max-width: 800px) {
     .select {
         grid-area: select;
         display: block;
