--- a/src/Components/Mapping/Mapping.module.css
+++ b/src/Components/Mapping/Mapping.module.css
@@ -170,7 +170,7 @@
   
 
 
-@media screen and (max-width: 1600px) {
+@media all and (max-width: 1600px) {
     .componentSale {
         letter-spacing: 1px;
         display: flex;
@@ -183,7 +183,7 @@
         justify-content: center;
     }
 }
-@media screen and (max-width: 600px) {
+@media all and (max-width: 600px) {
     .addToCart span button{
         font-size: 16px;
       }
@@ -239,7 +239,7 @@
 
 }
   
-  @media screen and (max-width: 400px) {  
+  @media all and (max-width: 400px) {  
     .addToCart span button{
         font-size: 15px;
       }
