--- a/src/Components/Shoes/Shoes.module.css
+++ b/src/Components/Shoes/Shoes.module.css
@@ -16,7 +16,7 @@
 .upImage img {
     width: 80%;
     height: 80%;
-    margin-top: 20px;
+    margin: 80px 0 50px;
 }
 .ShoesContent{
     grid-area: ShoesContent;
