--- a/src/Components/Woman/WomanMain.module.css
+++ b/src/Components/Woman/WomanMain.module.css
@@ -18,7 +18,7 @@ a:hover{
     grid-area: header;
     display: inline-block;
     width: 100%;
-    margin-top: 20px;
+    margin: 80px 0 50px;
 }
 .select {
     grid-area: select;
