--- a/src/Components/MainPage/Content/Product/Delivery.module.css
+++ b/src/Components/MainPage/Content/Product/Delivery.module.css
@@ -1,3 +1,75 @@
 .container{
-    margin-top: 200px;
+    display: flex;
+    flex-direction: column;
+    margin: 150px auto;
+    max-width: 1000px;
+    font-weight: 400;
+    font-size: 16px;
+}
+.container h2{
+    font-size: 34px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 6px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.container h3{
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+}
+.container h4{
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+}
+.delivery{
+    display: flex;
+    flex-direction: row;
+}
+.delivery span{
+    font-size: 35px;
+    font-weight: 100;
+    margin-right: 20px;
+}
+.deliveryText{
+    display: block;
+    text-align: start;
+}
+.deliveryReturn{
+    margin-left: 5.6%;
+}
+@media all and (max-width:800px){
+    .container{
+        margin: 100px auto;
+    }
+}
+@media all and (max-width:500px){
+    .container{
+        font-size: 14px;
+        margin: 100px 10px;
+    }
+    .container h2{
+        font-size: 20px;
+    }
+    .container h3{
+        font-size: 16px;
+    }
+    .container h4{
+        font-size: 15px;
+    }
+    .delivery{
+        display: flex;
+        flex-direction: row;
+    }
+    .delivery span{
+        font-size: 24px;
+    }
 }
